# maios

./: .env.example  .gitignore  BRANDING.md  pyproject.toml
docs/plans/: 2025-02-12-agent-creation-design.md  2025-02-12-agent-scoring-design.md  2025-02-12-channel-adapters-design.md  2025-02-12-frontend-visualization-design.md  2025-02-12-heartbeat-design.md  2025-02-12-maios-phase1-design.md  2025-02-12-maios-phase1-implementation.md  2025-02-12-metacontainer-design.md  2025-02-12-team-layer-design.md  2025-02-12-vscode-extension-design.md
maios/: __init__.py
maios/api/: __init__.py  main.py  websocket.py
maios/api/routes/: __init__.py  agents.py  health_detailed.py  projects.py
maios/cli/: __init__.py  main.py
maios/core/: __init__.py  agent_runtime.py  config.py  database.py
maios/models/: __init__.py  schemas.py
maios/sandbox/: __init__.py  manager.py  models.py
maios/skills/: __init__.py
maios/skills/builtin/: __init__.py  execute_code.py
maios/workers/: __init__.py  celery_app.py  heartbeat.py  heartbeat_config.py
tests/: __init__.py
tests/integration/: __init__.py  test_agents_api.py  test_health_api.py  test_projects_api.py  test_websocket.py
tests/unit/: __init__.py  test_agent_runtime.py  test_cli.py  test_config.py  test_database.py  test_execute_code.py  test_heartbeat.py  test_heartbeat_config.py  test_sandbox_manager.py
